Fix contents view, add horizontal scrolling (#94)

--- a/src/theme/_layout.scss
+++ b/src/theme/_layout.scss
@@ -91,8 +91,12 @@ footer {
   @include layout-container-width();
 }
 
+#page-contents > * {
+  @include layout-container-width();
+}
+
 .header-wrapper .header,
-#main .breadcrumb {
+.breadcrumbs .breadcrumb {
   @include layout-container-width();
   @include adjustMarginsToContainer($layout-container-width);
 }
